[package]
name = "oni"
version = "0.1.2"
authors = ["Lain-dono <lain.dono@gmail.com>"]
description = "Later on, there will be a framework for mmo games."

documentation = "https://oniproject.github.io/oni/oni"
#homepage = ""
repository = "https://github.com/oniproject/oni"

readme = "README.md"
license = "MIT/Apache-2.0"

[workspace]
members = [
	"node",
	"relay",
	"rooms",
	"testbed",

	"oni_net",
	"oni_coder",

	"oni_reliable",
	"oni_simulator",
]

[dependencies]
oni_simulator = { path = "oni_simulator", version = "0.1" }
oni_reliable = { path = "oni_reliable", version = "0.1" }
