[package]
name = "oni"
version = "0.1.3"
authors = ["Lain-dono <lain.dono@gmail.com>"]
description = "Later on, there will be a framework for mmo games."

documentation = "https://oniproject.github.io/oni/oni"
#homepage = ""
repository = "https://github.com/oniproject/oni"

readme = "README.md"
license = "MIT/Apache-2.0"

edition = "2018"

[workspace]
members = [
	"oni_trace",
	#"oni_sync",

	#"oni_reliable",

	#"examples/testbed",
	"examples/relay",
]

[dependencies]
#oni_reliable = { path = "oni_reliable", version = "0.1" }
oni_trace = { path = "oni_trace", version = "0.1.0" }
rand = "0.5"
generic-array = "0.12.0"
arrayvec = { version = "0.4.7", features = ["serde-1"] }
crossbeam-channel = "0.2.6"

byteorder = "1"
bincode = "1"
serde = "1"
serde_derive = "1"
fnv = "1"
lazy_static = "1"

smallvec = "0.6.5"

[features]
sodium = []
trace = ["oni_trace/trace"]
trace_location = ["oni_trace/trace_location"]
