[package]
name = "oni_net"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
edition = '2018'

[dependencies]
byteorder = "1"
generic-array = "0.12.0"
arrayvec = { version = "0.4.7", features = ["serde-1"] }
bincode = "1"
serde = "1"
serde_derive = "1"
fnv = "1"
crossbeam-channel = "0.2.6"
