[package]
name = "rooms"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]

edition = "2018"

[dependencies]
rand = "*"
fxhash = "*"
lazy_static = "*"
smallvec = "0.6"

typenum = "1"
num-traits = "0.2"

hibitset = "0.5.1"
specs = { version = "0.12.1", features = ["nightly", "serde"] }
specs-derive = "0.2"

[dev-dependencies.criterion]
version = "0.2"
default-features = false
features = ["real_blackbox"]

[[bench]]
name = "indexing"
harness = false
