[package]
name = "testbed"
version = "0.1.0"
authors = ["Lain-dono <lain.dono@gmail.com>"]
edition = "2018"

[dependencies]
oni = { path = "../..", version = "0.1" }
oni_trace = { path = "../../oni_trace", version = "0.1" }
oni_reliable = { path = "../../oni_reliable", version = "0.1" }
#rooms = { path = "../rooms" }

kiss2d = "0.1.2"

crossbeam-channel = "0.2.6"

log = { version = "0.4", features = ["max_level_trace"] }

generic-array = "0.11.1"

arrayvec = { version = "0.4.7", features = ["serde-1"] }

specs = { version = "0.12", features = ["nightly", "serde"] }
specs-derive = "0.2"

shred = "0.7"
shred-derive = "0.5"

rand = "0.5"

bitflags = "1"
rayon = "1"
lazy_static = "1"
fnv = "1"
bincode = { version = "1", features = ["i128"] }
serde = "1"
serde_json = "1"
serde_derive = "1"

#nalgebra = { version = "0.16", features = ["serde-serialize"] }
nalgebra = "0.16"
alga = "0.7"

[features]
trace = [
	"oni/trace",
]
